--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
