--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,14 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.1",
+    "axios": "^1.8.4",
     "cra-template-redux": "2.0.0",
     "frontend": "file:",
     "react": "^18.3.1",
@@ -15,6 +17,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
