--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,5 +16,8 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 
+# 拷贝自定义 Nginx 配置
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
