--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,7 +7,7 @@ server {
 
     # 前端所有 /api 请求代理到后端容器
     location /api/ {
-        proxy_pass http://backend:8000/;    # backend 是 docker-compose 后端服务名
+        proxy_pass http://backend:8000;    # backend 是 docker-compose 后端服务名 这里末尾不能有斜杠"/"
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
